add spotless plugin and refactor java and pom.xml files using google java formatter