@@ -1,5 +1,7 @@
 package com.social_media.config;
 
+import java.util.Arrays;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -21,81 +23,81 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.List;
-
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
-    private static final String SPLIT_BY_CHARACTER = ",";
+  private static final String SPLIT_BY_CHARACTER = ",";
 
-    private static final int PASSWORD_ENCODER_STRENGTH = 12;
+  private static final int PASSWORD_ENCODER_STRENGTH = 12;
 
-    private final UserDetailsService userDetailsService;
+  private final UserDetailsService userDetailsService;
 
-    private final JwtFilter jwtFilter;
+  private final JwtFilter jwtFilter;
 
-    @Value("${app.cors}")
-    private String corsAllowedPort;
+  @Value("${app.cors}")
+  private String corsAllowedPort;
 
-    @Value("${app.cors.allowed.pattern}")
-    private String corsAllowedPattern;
+  @Value("${app.cors.allowed.pattern}")
+  private String corsAllowedPattern;
 
-    @Value("${app.cors.allowed.methods}")
-    private String methods;
+  @Value("${app.cors.allowed.methods}")
+  private String methods;
 
-    @Value("${app.cors.allowed.headers}")
-    private String headers;
+  @Value("${app.cors.allowed.headers}")
+  private String headers;
 
-    @Value("${app.public.endpoints}")
-    private String endpoints;
+  @Value("${app.public.endpoints}")
+  private String endpoints;
 
-    public SecurityConfig(JwtFilter jwtFilter, UserDetailsService userDetailsService) {
-        this.jwtFilter = jwtFilter;
-        this.userDetailsService = userDetailsService;
-    }
+  public SecurityConfig(JwtFilter jwtFilter, UserDetailsService userDetailsService) {
+    this.jwtFilter = jwtFilter;
+    this.userDetailsService = userDetailsService;
+  }
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        return http.cors(Customizer.withDefaults())
-                .csrf(AbstractHttpConfigurer::disable)
-                .authorizeHttpRequests(request -> request
-                        .requestMatchers(endpoints.split(SPLIT_BY_CHARACTER))
-                        .permitAll()
-                        .anyRequest()
-                        .authenticated()
-                )
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
-                .build();
-    }
+  @Bean
+  public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    return http.cors(Customizer.withDefaults())
+        .csrf(AbstractHttpConfigurer::disable)
+        .authorizeHttpRequests(
+            request ->
+                request
+                    .requestMatchers(endpoints.split(SPLIT_BY_CHARACTER))
+                    .permitAll()
+                    .anyRequest()
+                    .authenticated())
+        .sessionManagement(
+            session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+        .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
+        .build();
+  }
 
-    @Bean
-    public AuthenticationProvider authenticationProvider(PasswordEncoder passwordEncoder) {
-        DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
-        provider.setPasswordEncoder(passwordEncoder);
-        provider.setUserDetailsService(userDetailsService);
-        return provider;
-    }
+  @Bean
+  public AuthenticationProvider authenticationProvider(PasswordEncoder passwordEncoder) {
+    DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+    provider.setPasswordEncoder(passwordEncoder);
+    provider.setUserDetailsService(userDetailsService);
+    return provider;
+  }
 
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
-        return configuration.getAuthenticationManager();
-    }
+  @Bean
+  public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration)
+      throws Exception {
+    return configuration.getAuthenticationManager();
+  }
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder(PASSWORD_ENCODER_STRENGTH);
-    }
+  @Bean
+  public PasswordEncoder passwordEncoder() {
+    return new BCryptPasswordEncoder(PASSWORD_ENCODER_STRENGTH);
+  }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(corsAllowedPort));
-        configuration.setAllowedMethods(Arrays.asList(methods.split(SPLIT_BY_CHARACTER)));
-        configuration.setAllowedHeaders(Arrays.asList(headers.split(SPLIT_BY_CHARACTER)));
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration(corsAllowedPattern, configuration);
-        return source;
-    }
+  @Bean
+  public CorsConfigurationSource corsConfigurationSource() {
+    CorsConfiguration configuration = new CorsConfiguration();
+    configuration.setAllowedOrigins(List.of(corsAllowedPort));
+    configuration.setAllowedMethods(Arrays.asList(methods.split(SPLIT_BY_CHARACTER)));
+    configuration.setAllowedHeaders(Arrays.asList(headers.split(SPLIT_BY_CHARACTER)));
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration(corsAllowedPattern, configuration);
+    return source;
+  }
 }
